added backend functionality to fetch tickets with show info
