# backend/src/main/java/at/ac/tuwien/sepm/groupphase/backend/endpoint/interfaces/TicketInfoApi.java
@@ -73,7 +73,7 @@ public interface TicketInfoApi {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"locationName\" : \"locationName\", \"ticket\" : { \"rowNumber\" : 6, \"sector\" : 5, \"ticketId\" : 0.8008281904610115, \"seatNumber\" : 1 }, \"artists\" : [ \"artists\", \"artists\" ], \"city\" : \"city\", \"eventName\" : \"eventName\", \"type\" : \"purchased\", \"showDate\" : \"2000-01-23T04:56:07.000+00:00\" }";
+                    String exampleString = "{ \"locationName\" : \"locationName\", \"ticket\" : { \"rowNumber\" : 6, \"sector\" : 5, \"ticketId\" : 0, \"seatNumber\" : 1 }, \"artists\" : [ \"artists\", \"artists\" ], \"city\" : \"city\", \"eventName\" : \"eventName\", \"type\" : \"purchased\", \"showDate\" : \"2000-01-23T04:56:07.000+00:00\" }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
